ns-kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress-kong
  namespace: kong
  annotations:
      konghq.com/strip-path: 'true'
      # konghq.com/plugins: rate-limiting-example
spec:
  ingressClassName: kong
  rules:
  - http:
      paths: 
      - backend:
          service:
            name: konga
            port:
              number: 1337
        path: /
        pathType: Prefix
  # - http:
  #     paths: 
  #     - backend:
  #         service:
  #           name: nginx-service
  #           port:
  #             number: 80
  #       path: /nginx
  #       pathType: Prefix

  # - http:
  #     paths: 
  #     - backend:
  #         service:
  #           name: mongo-express-service
  #           port:
  #             number: 8081
  #       path: /mongo
  #       pathType: Prefix
